fix Remove “seam lines” on mobile -> why is this happening?

--- a/moodring/moodring/styles.css
+++ b/moodring/moodring/styles.css
@@ -5,6 +5,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  scroll-behavior: smooth;
+
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -60,6 +62,17 @@ body {
   /* background: url('images/bg.png'), auto; */
   /* cursor: url('images/char/swimLady.png') 12 18, auto; */
 }
+
+div{
+  margin-bottom:-1px;
+}
+div:last-of-type{
+  margin-bottom:0;
+}
+/* 
+.lvl{
+
+} */
 
 @media (max-width: 680px), screen and (orientation: portrait) {
   p {
